<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4271FF"
    tools:context=".ScanApps">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrowback"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backarrow" />


        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_apps"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/scaning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Scaning"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gifImageView"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical90"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical10"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/scan_your_mobile_phone_apps_which_apps_available_for_update_on_time"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical90"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical10"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal10" />


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/animation_gif"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal65"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical90"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical10"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal30"
        app:lottie_autoPlay="true">

    </pl.droidsonroids.gif.GifImageView>

    <ImageView
        android:id="@+id/appicon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/gifImageView"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toStartOf="@+id/image_setting_guide_vertical"
        app:layout_constraintStart_toStartOf="@+id/image_setting_guide_vertical2"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal30"
        app:srcCompat="@drawable/gifcebtre" />

    <TextView
        android:id="@+id/appName1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="app_name"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal75"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical90"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical10"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal65" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cont1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bgconst"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical90"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical10"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal75">

        <TextView
            android:id="@+id/checkingUpdates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checking_updates"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bgconst"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical90"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical10"
        app:layout_constraintTop_toBottomOf="@+id/cont1">

        <TextView
            android:id="@+id/tolatupdatefound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_update_found"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_setting_guide_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_setting_guide_vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />


</androidx.constraintlayout.widget.ConstraintLayout>
